--- a/scss/Movie_application.scss
+++ b/scss/Movie_application.scss
@@ -85,7 +85,9 @@ img{
         position: absolute;
         top: 0;
         left: 0;
-        background-color: rgba(0,0,0,0.8);
+        border: 3px solid blue;
+        padding: 0;
+        // background-color: rgba(0,0,0,0.8);
     }
     width: 100%;
     height: 100vh;
@@ -150,12 +152,14 @@ img{
     bottom: 0;
     padding: 12vw;
     padding-top: 20px;
-    padding-bottom:10vw;
-    overflow: auto;
+    // padding-bottom:10vw;
+    overflow: hidden;
+    text-wrap: wrap;
     // text-align: center;
     width: 100%;
+    height: 50%;
     background-color: rgba(0,0,0,0.5);
-    // background-color: black;
+    background-color: black;
     h2{
         font-size: 3.5vw; 
         letter-spacing: 0.3rem;
@@ -164,20 +168,6 @@ img{
         font-size: 0.9rem;
         text-align: justify;
         letter-spacing: 0.05rem;
-    }
-    .desc-details{
-        @include flex-center;
-        max-width: 250px;
-        justify-content: space-between;
-        p{
-            margin: 10px 0px;
-            padding: 7px 15px;
-            border-radius: 25px;
-            background-color: $extract-color;
-            &.desc-year{
-                background-color: $new-color;
-            }
-        }
     }
     #play-btn{
         margin: 10px 0px;
@@ -197,8 +187,7 @@ img{
             font-size: 20px;
         }
         &:hover{
-            opacity: 0.9;
-            
+            opacity: 0.9;      
         }
     }
 }
@@ -446,6 +435,32 @@ footer{
      }
 }
 @media screen and (max-width: 600px){
+    .slide-container{
+        .container {
+            width: 90vw;
+            height: 84vh;
+            margin-top: -10vh;
+        }
+        .slide{
+            top: -13vh;
+            left: -5vw;
+        }
+        .left-btn, .right-btn{
+        font-size: 90%;
+        width: 40px;
+        height: 38px;
+    }
+    }
+    .slide-content{
+         h2{
+        font-size: 5vw; 
+        letter-spacing: 0.2rem;
+        }
+        p{
+            font-size: 0.7rem;
+            letter-spacing: 0.02rem;
+        }
+    }
     nav{
         padding: 10px 3%;
         input{display: none;}
