--- a/scss/Movie_application.scss
+++ b/scss/Movie_application.scss
@@ -85,9 +85,8 @@ img{
         position: absolute;
         top: 0;
         left: 0;
-        border: 3px solid blue;
         padding: 0;
-        // background-color: rgba(0,0,0,0.8);
+        background-color: rgba(0,0,0,0.8);
     }
     width: 100%;
     height: 100vh;
@@ -154,12 +153,12 @@ img{
     padding-top: 20px;
     // padding-bottom:10vw;
     overflow: hidden;
-    text-wrap: wrap;
+    overflow-wrap: break-word;
     // text-align: center;
     width: 100%;
     height: 50%;
     background-color: rgba(0,0,0,0.5);
-    background-color: black;
+    // background-color: black;
     h2{
         font-size: 3.5vw; 
         letter-spacing: 0.3rem;
@@ -439,10 +438,9 @@ footer{
         .container {
             width: 90vw;
             height: 84vh;
-            margin-top: -10vh;
         }
         .slide{
-            top: -13vh;
+            top: -8vh;
             left: -5vw;
         }
         .left-btn, .right-btn{
