--- a/scss/Movie_application.scss
+++ b/scss/Movie_application.scss
@@ -6,6 +6,57 @@ body{
     z-index: -1;
     font-family: "poppins", sans-serif;
 }
+#trailer-container{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    top: 0;
+    background-color: rgba(0,0,0,0.5);
+    left: 0;
+    overflow: hidden;
+    @include flex-center;
+    display: none;
+    .overview-structure{
+        border-radius: 25px;
+        overflow: hidden;
+        width: 90vw;
+        margin-top: 5%;
+        height: 85vh;
+        background-color: rgba(0, 0, 0, 1);
+        text-align: center;
+        // animation-name: popIn;
+        // animation-duration: 10s;
+        // transition: 3s ease-in;
+        iframe{width: 100%;height: 60%;}
+        .overview-content{
+            padding: 10px;
+            h2{
+                color: $extract-color;
+                font-size: 200%;
+            }
+            p{
+                letter-spacing: 0.3px;
+                color: $font-color;
+            }
+        }
+        #close-trailerContainer{
+            padding: 0.7rem 1.5rem;
+            outline: none;
+            border: none;
+            color: $font-color;
+            background-color: $extract-color;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 18px;
+            box-shadow: 0px 0px 10px $secondary-color;
+            &:active{
+                transform: scale(1.1);
+                background-color: $new-color;
+            }
+        }
+    }
+}
 nav{
     width: 100%; 
     z-index: 3;
@@ -332,6 +383,10 @@ footer{
         margin: 30px 10px;
     }
 }
+// @keyframes PopIn {
+//     from{margin-top: -5vh;}
+//     to{margin-top: 0;}
+// }
 @media screen and (max-width: 1200px){
     nav{padding: 10px 4%;}
     #movie_section{
@@ -345,10 +400,11 @@ footer{
      
 }
 @media screen and (max-width: 800px){
+    #trailer-container .overview-structure{width: 90%;height: 85%; margin-top: 5%;} 
     nav{
         padding: 10px 3%;
         #mobile{display: inline-block;}
-    }
+    } 
     .nav-links{display: none;}
     #side-nav{
         position: fixed;
@@ -434,6 +490,10 @@ footer{
      }
 }
 @media screen and (max-width: 600px){
+    #trailer-container .overview-structure{width: 90%;height: 80%; margin-top: 5%;} 
+    #trailer-container .overview-structure iframe{
+        height: 60%;
+    }
     .slide-container{
         .container {
             width: 90vw;
