Induct trailer for the sliders section

--- a/scss/Movie_application.scss
+++ b/scss/Movie_application.scss
@@ -219,6 +219,7 @@ img{
         text-align: justify;
         letter-spacing: 0.05rem;
     }
+    span{display: none;}
     #play-btn{
         margin: 10px 0px;
         padding: 10px 20px;
